--- a/OMPMobileApp/Components/Pages/Home.razor
+++ b/OMPMobileApp/Components/Pages/Home.razor
@@ -98,6 +98,6 @@
     private async Task OnLogoff()
     {
         await AuthorizationService.Logoff();
-        Navigation.NavigateTo("/", forceLoad: true); // Or wherever your login page is
+        Navigation.NavigateTo("/", forceLoad: true); 
     }
 }
