--- a/OMPWebApp/Components/Pages/EditGroupDialog.razor
+++ b/OMPWebApp/Components/Pages/EditGroupDialog.razor
@@ -6,10 +6,10 @@
 
 <RadzenTemplateForm TItem="GroupDTO" Data="@group" Submit="@Save" Style="padding: 20px;">
     <RadzenFieldset Legend="Edit Group Details">
-        <RadzenLabel Text="Name" />
+        <RadzenLabel Text="Group name" />
         <RadzenTextBox @bind-Value="group.Title" Placeholder="Enter customer name" Style="width: 100%;" />
 
-        <RadzenLabel Text="Surname" Style="margin-top: 10px;" />
+        <RadzenLabel Text="Description" Style="margin-top: 10px;" />
         <RadzenTextBox @bind-Value="group.Description" Placeholder="Enter Surname" Style="width: 100%;" />
     </RadzenFieldset>
 
